--- a/videomergerIOS.html
+++ b/videomergerIOS.html
@@ -135,11 +135,11 @@
                 var blob = new Blob([fileData]);
                 var src = window.URL.createObjectURL(blob);
                 const filereader = new FileReader();
-                var dsrc = filereader.readAsDataURL(blob);
+                var dsrc = filereader.readAsDataURL(new File([blob], "REDDITVIDEO.mp4",{type: "video/mp4"}));
                 //document.getElementById("log").innerHTML = "src" + src + " dsrc" + dsrc;
                 filereader.onload =  function(e){
                     document.location.href = e.target.result;
-                    console.log('DataURL:', e.target.result);
+                    //console.log('DataURL:', e.target.result);
                 };
                 //document.location.replace(dsrc);
                 //const shareData = {title:fileName, text:"Reddit Video", url:dsrc};
