break instead of return

--- a/videomerger_IOS.html
+++ b/videomerger_IOS.html
@@ -163,7 +163,7 @@ layout: default
             })();
           
             if (XMLFail) {
-              return
+              break
             }
 
             function getDownloadLink(fileData, fileName) {
