--- a/videomerger_IOS.html
+++ b/videomerger_IOS.html
@@ -148,6 +148,7 @@ layout: default
                     oReq3.onload = function (oEvent) {
                       var arrayBuffer3 = oReq3.response;
                       if (arrayBuffer3) {
+                        oReq2.abort();
                       AudioData = new Uint8Array(arrayBuffer3);
                         runworker();
                       }
