--- a/videomerger_IOS.html
+++ b/videomerger_IOS.html
@@ -136,7 +136,7 @@ layout: default
                 if (this.readyState == 4 && this.status != 200) {
                     oReq2.abort();
                     var oReq3 = new XMLHttpRequest();
-                    AUDIOLINK = AUDIOLINK.replace("DASH_audio", "audio");
+                    AUDIOLINK = AUDIOLINK.replace("DASH_audio.mp4", "audio");
                     oReq3.open("GET", AUDIOLINK, true);
                     oReq3.responseType = "arraybuffer";
                     oReq3.onreadystatechange = function (oEvent2) {
