--- a/videomerger_IOS.html
+++ b/videomerger_IOS.html
@@ -83,7 +83,7 @@ layout: default
         </script>
     </head>
     <body>
-        <p id="log"></p>
+        <p id="log">Downloading</p>
         <script>
             (function () {
                 var old = console.log;
@@ -193,6 +193,7 @@ layout: default
             }
 
             function runworker() {
+              document.getElementById("log").innerHTML = "";
             var worker = new Worker(URL.createObjectURL(new Blob(["("+worker_function.toString()+")()"], {type: 'text/javascript'})));
             worker.onmessage = function (event) {
             var message = event.data;
